# OpenSourceOrtho

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO.md  LICENSE  README.md  SECURITY.md  TODO.md  happysmile  pyproject.toml  run-openortho
.claude/: settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AI_CHAT_MCP.md  ARCHITECTURE.md  CLI_WALKTHROUGH.md  DATA_CONTRIBUTION.md  GLOSSARY.md  LICENSE_AUDIT.md  LLM_PROMPTS.md  MAINTAINABILITY.md  MOBILE.md  OPEN_SOURCE_REFERENCES.md  OpenAI_Agents.md  README.md  SAFETY.md  SOURCES_AND_RECOMMENDED_SOFTWARE.md  UI_DESIGN.md  aligner-shell-backend.md  application maturity.md  cbct-evaluation.md  occlusion-registration.md  segmentation-learned-backend-handoff.md  segmentation-learned-backend.md
examples/: README.md  basic_plan.json  generate_examples.py  generate_north_star.py  north_star_canonical_plan.json  segmented_plan.json
mobile/: .gitignore  API_CONTRACT.md  README.md
orthoplan/: __init__.py  ai_chat.py  ai_chat_stream.py  ai_connectors.py  aligner_shell.py  aligner_shell_mesh.py  aligner_shell_quality.py  aligner_shell_robust.py  aligner_shell_stats.py  aligner_shell_topology.py  api.py  arch_contract.py  case_api.py  case_review.py  cases.py  cbct_workflow.py  cli.py  cli_cases.py  cli_compare.py  cli_contribution.py  cli_landmarks.py  cli_mesh.py  cli_packages.py  clinical_control_checks.py  dicom_intake.py  generation.py  generation_checks.py  hashing.py  mesh_geometry.py  mesh_intersect.py  mesh_workspace.py  print_aligner.py  print_package.py  print_stl.py  printing.py  record_workspace.py  registration_auto.py  reporting.py  segmentation_api.py  server.py  (+3 more)
prompts/: README.md  transverse-arch-width-sanity-check.md
shared/: glossary.json
tests/: test_acquisition.py  test_advisory.py  test_ai_chat.py  test_aligner_shell.py  test_anatomical_frame.py  test_anatomy.py  test_api.py  test_arch_analysis.py  test_arch_profile.py  test_assets.py  test_biomechanical_movement.py  test_canonical_root_bone_fixture.py  test_case_api.py  test_case_review.py  test_case_review_golden.py  test_cbct_prior.py  test_cbct_workflow.py  test_cli.py  test_cli_contribution.py  test_cli_segmentation_benchmark.py  test_clinical_controls.py  test_collision_optimizer_cases.py  test_collision_triangle_contact.py  test_dataset.py  test_dicom_intake.py  test_examples.py  test_finding.py  test_generate.py  test_generation_gateway.py  test_glossary_sync.py  test_longitudinal_benchmark.py  test_measurement_lab.py  test_measurement_validation.py  test_mesh_frame.py  test_mesh_intersect.py  test_mesh_quality.py  test_mesh_transform.py  test_mesh_workspace.py  test_mobile_contract.py  test_model.py  (+33 more)
ui/: README.md  (+35 more)
(+158 files in other folders)
