[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orthoplan"]

[tool.hatch.build.targets.wheel.force-include]
"orthoplan/validation/golden_fixtures" = "orthoplan/validation/golden_fixtures"

[project]
name = "opensource-ortho"
version = "1.1.0"
description = "Open-source orthodontic treatment-planning research toolkit for clear-aligner workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "OpenSource Ortho contributors" }
]
dependencies = [
  "pydantic>=2.7",
  "typing-extensions>=4.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]
providers = [
  "openai>=1.0"
]
mesh = [
  "trimesh>=4.0"
]
mesh-processing = [
  "open3d>=0.18"
]
e2e = [
  "playwright>=1.40"
]

[project.scripts]
orthoplan = "orthoplan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
